# tfm-joint-imputation-clustering

./: .gitignore  CITATION.cff  Makefile  PROJECT_TREE.txt  README.md  environment.yml  pyproject.toml  requirements.txt  run_full.bat  run_full.sh  run_smoke.bat  run_smoke.sh
.github/workflows/: tests.yml
configs/: toy_full.yaml  toy_smoke.yaml  wholesale_final.template.yaml  wholesale_final.yaml  wholesale_final_extended_time.yaml  wholesale_final_pam_mip_start.yaml  wholesale_final_pam_mip_start_7200.yaml  wholesale_smoke.yaml  wholesale_smoke_pam_mip_start.yaml
docs/: methodology.md  output_tables.md
scripts/: run_toy_experiment.py  run_wholesale_experiment.py
src/joint_imputation_clustering/: __init__.py  cli.py  config.py
src/joint_imputation_clustering/analysis/: aggregate.py  marketing.py  runtime.py
src/joint_imputation_clustering/clustering/: references.py
src/joint_imputation_clustering/data/: missingness.py  toy.py  wholesale.py
src/joint_imputation_clustering/experiment/: baselines.py  runner.py  wholesale_runner.py
src/joint_imputation_clustering/imputation/: candidates.py
src/joint_imputation_clustering/metrics/: evaluation.py
src/joint_imputation_clustering/models/: complete_l1.py  (+3 more)
tests/: test_aggregate_wholesale.py  test_complete_l1_optional.py  test_config.py  test_evaluation_without_truth.py  test_imputation.py  test_marketing_metrics.py  test_metrics.py  test_missingness.py  test_runtime_accounting.py  test_seeding.py  test_wholesale_config.py  test_wholesale_loader.py  test_wholesale_preprocessing.py  test_wholesale_split.py
(+3 files in other folders)
